--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "gaia",
+  "name": "gaia-lore",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "scripts": {
-    "clean": "rm dist/bundle.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kjniemela/Remnant.git"
+  },
+  "author": "kjniemela",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kjniemela/Remnant/issues"
+  },
+  "homepage": "https://github.com/kjniemela/Remnant#readme",
   "dependencies": {
-    "express": "^4.17.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "express": "^4.18.0",
+    "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "nodemon": "^2.0.15"
   }
 }
